05_squares/grade.txt
Grading at Fri Aug 21 12:19:15 UTC 2020
Trying to compile your code and link with squares_test.o
squares.c: In function ‘isAtBoarder’:
squares.c:30:46: error: implicit declaration of function ‘isInRange’ [-Werror=implicit-function-declaration]
   if ((x==myrect.left || x==myrect.right) && isInRange(y,myrect.top,myrect.bottom)){
                                              ^
cc1: all warnings being treated as errors
Could not compile your code

Overall Grade: FAILED
